// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity renders correctly 1`] = `
<_default
  appVersionEvents={
    Array [
      Object {
        "createdAt": 2018-09-20T12:42:31.000Z,
        "createdAtTimestamp": 1537447351000,
        "id": "1234",
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "finished",
        "text": "Event finished successfully!",
        "updatedAt": 2018-09-21T12:42:31.000Z,
        "updatedAtTimestamp": 1537533751000,
      },
      Object {
        "createdAt": 2018-09-22T12:42:31.000Z,
        "createdAtTimestamp": 1537620151000,
        "id": "1234",
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "in-progress",
        "text": "Doing something...",
        "updatedAt": 2018-09-25T12:42:31.000Z,
        "updatedAtTimestamp": 1537879351000,
      },
      Object {
        "createdAt": 2018-09-26T12:42:31.000Z,
        "createdAtTimestamp": 1537965751000,
        "id": "1234",
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "failed",
        "text": "An error occured.",
        "updatedAt": 2018-09-27T12:42:31.000Z,
        "updatedAtTimestamp": 1538052151000,
      },
    ]
  }
/>
`;

exports[`ActivityView when a test failed renders entry with download log button 1`] = `
<Base
  paddingVertical="x8"
>
  <Base
    className="expandedTableWrapper"
  >
    <Table
      type="flat"
    >
      <TableHeader>
        <TableHeaderRow>
          <TableHeaderCell>
            Date
          </TableHeaderCell>
          <TableHeaderCell
            colSpan="2"
          >
            Activity
          </TableHeaderCell>
        </TableHeaderRow>
      </TableHeader>
      <TableBody>
        <TableRow
          key="0"
        >
          <TableCell
            title="2018-09-26 12:42:31"
            width="240px"
          >
            September 26, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="red-3"
                name="CloseSmall"
                size="1.5rem"
              />
              <Text
                color="red-3"
                size="x3"
              >
                An error occured.
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          >
            <a
              href="https://www.bitrise.io/assets/svg/logo-bitrise.svg"
            >
              <Button
                level="secondary"
                size="small"
              >
                <Icon
                  color="grape-4"
                  name="Download"
                  size="1.5rem"
                />
                Download Build Log
              </Button>
            </a>
          </TableCell>
        </TableRow>
      </TableBody>
    </Table>
  </Base>
</Base>
`;

exports[`ActivityView when a test is in progress renders entry without download log button 1`] = `
<Base
  paddingVertical="x8"
>
  <Base
    className="expandedTableWrapper"
  >
    <Table
      type="flat"
    >
      <TableHeader>
        <TableHeaderRow>
          <TableHeaderCell>
            Date
          </TableHeaderCell>
          <TableHeaderCell
            colSpan="2"
          >
            Activity
          </TableHeaderCell>
        </TableHeaderRow>
      </TableHeader>
      <TableBody>
        <TableRow
          key="0"
        >
          <TableCell
            title="2018-09-22 12:42:31"
            width="240px"
          >
            September 22, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="green-4"
                name="Tick"
                size="1.5rem"
              />
              <Text
                color="grape-4"
                size="x3"
              >
                Doing something...
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          />
        </TableRow>
      </TableBody>
    </Table>
  </Base>
</Base>
`;

exports[`ActivityView when a test is successful renders entry without download log button 1`] = `
<Base
  paddingVertical="x8"
>
  <Base
    className="expandedTableWrapper"
  >
    <Table
      type="flat"
    >
      <TableHeader>
        <TableHeaderRow>
          <TableHeaderCell>
            Date
          </TableHeaderCell>
          <TableHeaderCell
            colSpan="2"
          >
            Activity
          </TableHeaderCell>
        </TableHeaderRow>
      </TableHeader>
      <TableBody>
        <TableRow
          key="0"
        >
          <TableCell
            title="2018-09-20 12:42:31"
            width="240px"
          >
            September 20, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="green-4"
                name="Tick"
                size="1.5rem"
              />
              <Text
                color="grape-4"
                size="x3"
              >
                Event finished successfully!
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          />
        </TableRow>
      </TableBody>
    </Table>
  </Base>
</Base>
`;

exports[`ActivityView when viewed on desktop renders the details view correctly 1`] = `
<Base
  paddingVertical="x8"
>
  <Base
    className="expandedTableWrapper"
  >
    <Table
      type="flat"
    >
      <TableHeader>
        <TableHeaderRow>
          <TableHeaderCell>
            Date
          </TableHeaderCell>
          <TableHeaderCell
            colSpan="2"
          >
            Activity
          </TableHeaderCell>
        </TableHeaderRow>
      </TableHeader>
      <TableBody>
        <TableRow
          key="0"
        >
          <TableCell
            title="2018-09-20 12:42:31"
            width="240px"
          >
            September 20, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="green-4"
                name="Tick"
                size="1.5rem"
              />
              <Text
                color="grape-4"
                size="x3"
              >
                Event finished successfully!
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          />
        </TableRow>
        <TableRow
          key="1"
        >
          <TableCell
            title="2018-09-22 12:42:31"
            width="240px"
          >
            September 22, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="green-4"
                name="Tick"
                size="1.5rem"
              />
              <Text
                color="grape-4"
                size="x3"
              >
                Doing something...
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          />
        </TableRow>
        <TableRow
          key="2"
        >
          <TableCell
            title="2018-09-26 12:42:31"
            width="240px"
          >
            September 26, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="red-3"
                name="CloseSmall"
                size="1.5rem"
              />
              <Text
                color="red-3"
                size="x3"
              >
                An error occured.
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          >
            <a
              href="https://www.bitrise.io/assets/svg/logo-bitrise.svg"
            >
              <Button
                level="secondary"
                size="small"
              >
                <Icon
                  color="grape-4"
                  name="Download"
                  size="1.5rem"
                />
                Download Build Log
              </Button>
            </a>
          </TableCell>
        </TableRow>
      </TableBody>
    </Table>
  </Base>
</Base>
`;

exports[`ActivityView when viewed on mobile renders the details view correctly 1`] = `
<Base
  paddingVertical="x8"
>
  <Base
    className="expandedTableWrapper"
  >
    <Table
      type="flat"
    >
      <TableHeader>
        <TableHeaderRow>
          <TableHeaderCell>
            Date
          </TableHeaderCell>
          <TableHeaderCell
            colSpan="2"
          >
            Activity
          </TableHeaderCell>
        </TableHeaderRow>
      </TableHeader>
      <TableBody>
        <TableRow
          key="0"
        >
          <TableCell
            title="2018-09-20 12:42:31"
            width="240px"
          >
            September 20, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="green-4"
                name="Tick"
                size="1.5rem"
              />
              <Text
                color="grape-4"
                size="x3"
              >
                Event finished successfully!
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          />
        </TableRow>
        <TableRow
          key="1"
        >
          <TableCell
            title="2018-09-22 12:42:31"
            width="240px"
          >
            September 22, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="green-4"
                name="Tick"
                size="1.5rem"
              />
              <Text
                color="grape-4"
                size="x3"
              >
                Doing something...
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          />
        </TableRow>
        <TableRow
          key="2"
        >
          <TableCell
            title="2018-09-26 12:42:31"
            width="240px"
          >
            September 26, 2018
             at 
            12:42:31
          </TableCell>
          <TableCell>
            <Flex
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x4"
              height="2rem"
            >
              <Icon
                color="red-3"
                name="CloseSmall"
                size="1.5rem"
              />
              <Text
                color="red-3"
                size="x3"
              >
                An error occured.
              </Text>
            </Flex>
          </TableCell>
          <TableCell
            width="200px"
          >
            <a
              href="https://www.bitrise.io/assets/svg/logo-bitrise.svg"
            >
              <Button
                level="secondary"
                size="small"
              >
                <Icon
                  color="grape-4"
                  name="Download"
                  size="1.5rem"
                />
                Download Build Log
              </Button>
            </a>
          </TableCell>
        </TableRow>
      </TableBody>
    </Table>
  </Base>
</Base>
`;
